--- a/latex/atlascomment.sty
+++ b/latex/atlascomment.sty
@@ -8,7 +8,7 @@
 %
 % Copyright (C) 2002-2021 CERN for the benefit of the ATLAS collaboration.
 %-------------------------------------------------------------------------------
-\ProvidesPackage{latex/atlascomment}[2021/05/19 v11.3.0 ATLAS language editing style]
+\ProvidesPackage{latex/atlascomment}[2021/06/09 v11.4.0 ATLAS language editing style]
 \NeedsTeXFormat{LaTeX2e}
 
 %-------------------------------------------------------------------------------
@@ -25,7 +25,7 @@
 
 \RequirePackage{xspace}
 
-\ifACOMM@comment
+\ifthenelse{\boolean{ACOMM@comment}}{%
   \typeout{atlascomment: showing comments}
   \typeout{Sizes before changing settings:}
   \typeout{text height and width \the\textheight, \the\textwidth}
@@ -46,11 +46,11 @@
       {\textcolor{magenta}{#2}\todo[color=pink, linecolor=magenta]{#3}\xspace}
       {\textcolor{magenta}{#2}\todo[color=pink, linecolor=magenta, #1]{#3}\xspace}
   }
-\else
+}{%
   \typeout{atlascomment: not showing comments}
   \RequirePackage[disable]{todonotes}
   \newcommand{\LEcomment}[3][]{\todo[#1]{#2}\xspace}
-\fi
+}
 
 % \presetkeys{todonotes}{fancyline, color=blue!30}{}
 \presetkeys{todonotes}{color=cyan!20, linecolor=cyan}{}
