--- a/latex/atlastodo.sty
+++ b/latex/atlastodo.sty
@@ -8,7 +8,7 @@
 %
 % Copyright (C) 2002-2021 CERN for the benefit of the ATLAS collaboration.
 %-------------------------------------------------------------------------------
-\ProvidesPackage{latex/atlastodo}[2021/05/19 v11.3.0 ATLAS to-do notes]
+\ProvidesPackage{latex/atlastodo}[2021/06/09 v11.4.0 ATLAS to-do notes]
 \NeedsTeXFormat{LaTeX2e}
 
 %-------------------------------------------------------------------------------
@@ -25,14 +25,14 @@
 \ProcessKeyvalOptions*
 
 % Print the notes
-\ifANOTE@output
+\ifthenelse{\boolean{ANOTE@output}}{%
   \typeout{ATLAS document: showing notes}
-  \ifANOTE@shift
+  \ifthenelse{\boolean{ANOTE@shift}}{%
     \KOMAoptions{BCOR=-5mm}
     \KOMAoptions{DIV=last}
     \addtolength{\marginparwidth}{10mm}
     \addtolength{\textwidth}{-7.86mm}
-  \fi
+  }{}
   \RequirePackage[colorinlistoftodos]{todonotes}
   % \presetkeys{todonotes}{color=cyan!20, linecolor=cyan}{}
   % \typeout{ATLnote: 1=#1; 2=#2; 3=#3; 4=#4; 5=#5}
@@ -42,7 +42,7 @@
   \newcommand{\ATL@note}[5]{%
     \textcolor{#5}{#2}\todo[author=#1, color=#4, linecolor=#5]{#3}\xspace%
   }
-\else
+}{%
   \typeout{ATLAS document: not showing notes}
   \RequirePackage[disable]{todonotes}
   % \typeout{ATLnote: 1:#1; 2:#2; 3:#3; 4=#4; 5=#5}
@@ -52,7 +52,7 @@
   \newcommand{\ATL@note}[5]{%
     #2\xspace%
   }
-\fi
+}
 
 % Macro to set up a note command
 \newcommand{\ATLnote}[4]{%
